tests/more_classes/more_classes.exp
Error: Bar.js:15
 15:     new Qux().w = "?";
                       ^^^ string [1] is incompatible with number [2].
  References:
   15:     new Qux().w = "?";
                         ^^^ [1]: string
   15:     new Qux().w = "?";
           ^^^^^^^^^^^ [2]: number

Error: Foo.js:7
  7: class Foo extends Qux {
           ^^^ Foo. Cannot extend
  7: class Foo extends Qux {
                       ^^^ Qux
  Property `fooqux` is incompatible:
           v-----------------
     21:   fooqux(x:string) {
     22:     this.x;
     23:   }
           ^ function. This type is incompatible with
      9:   fooqux(x:number) { }
           ^^^^^^^^^^^^^^^^^^^^ function. See: Qux.js:9
      The first parameter is incompatible:
          9:   fooqux(x:number) { }
                        ^^^^^^ number. This type is incompatible with. See: Qux.js:9
         21:   fooqux(x:string) {
                        ^^^^^^ string

Error: Foo.js:10
 10:     this.x = x;
              ^ property `x`. Property cannot be assigned on possibly undefined value
 10:     this.x = x;
         ^^^^ uninitialized this (expected super constructor call)

Error: Foo.js:13
 13:   foo(y:string,z):number {
                    ^ z. Missing annotation

Error: Foo.js:16
 16:     var v = new Bar(y);
                         ^ string. This type is incompatible with the expected param type of
  9:   constructor(y:number) {
                     ^^^^^^ number. See: Bar.js:9

Error: Foo.js:18
 18:     return v.bar(z,u);
                ^^^^^^^^^^ Cannot return `v.bar(...)` because string [1] is incompatible with number [2].
  References:
   14:   bar(z:string,u:string):string {
                                ^^^^^^ [1]: string. See: Bar.js:14
   13:   foo(y:string,z):number {
                         ^^^^^^ [2]: number

Error: Foo.js:18
 18:     return v.bar(z,u);
                        ^ number. This type is incompatible with the expected param type of
 14:   bar(z:string,u:string):string {
                      ^^^^^^ string. See: Bar.js:14


Found 7 errors
